{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 12,
  "lineage": "5414143f-0583-c506-56cc-39bfbbb3cbc5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6779df252c1302c",
            "arn": "arn:aws:ec2:ap-south-1:339713171962:elastic-ip/eipalloc-0e6779df252c1302c",
            "domain": "vpc",
            "id": "eipalloc-0e6779df252c1302c",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-7-99-119.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.99.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "example name "
            },
            "tags_all": {
              "name": "example name "
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713171962:internet-gateway/igw-06fbfd5bc6ce34364",
            "id": "igw-06fbfd5bc6ce34364",
            "owner_id": "339713171962",
            "tags": {
              "Name": "MainIGW"
            },
            "tags_all": {
              "Name": "MainIGW"
            },
            "vpc_id": "vpc-05edd1ff5e542309e"
          },
          "dependencies": [
            "aws_vpc.Mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatTF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6779df252c1302c",
            "association_id": "eipassoc-060d7f373e73e3f8e",
            "connectivity_type": "public",
            "id": "nat-0754c8389e32c4d1f",
            "network_interface_id": "eni-02716e107e8a5c723",
            "private_ip": "10.0.1.91",
            "public_ip": "3.7.99.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-069c1545a218a23df",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.myeip",
            "aws_subnet.pubsub",
            "aws_vpc.Mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prirt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0175165094b55637f",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.2.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0754c8389e32c4d1f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prirt"
            },
            "tags_all": {
              "Name": "prirt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05edd1ff5e542309e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.myeip",
            "aws_nat_gateway.NatTF",
            "aws_subnet.pubsub",
            "aws_vpc.Mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0c21280ee9e3c2914",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06fbfd5bc6ce34364",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubrt"
            },
            "tags_all": {
              "Name": "pubrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05edd1ff5e542309e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.Mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713171962:security-group/sg-03fe218d5e1655168",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-03fe218d5e1655168",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "339713171962",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-05edd1ff5e542309e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713171962:subnet/subnet-069c1545a218a23df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069c1545a218a23df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713171962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PUBSUb-001"
            },
            "tags_all": {
              "Name": "PUBSUb-001"
            },
            "vpc_id": "vpc-05edd1ff5e542309e"
          },
          "dependencies": [
            "aws_vpc.Mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713171962:vpc/vpc-05edd1ff5e542309e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037f27bd43fab1a47",
            "default_route_table_id": "rtb-001f7c23333ca15eb",
            "default_security_group_id": "sg-0d6b6cf6eee40889a",
            "dhcp_options_id": "dopt-06eadffb7db0b7bf1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05edd1ff5e542309e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001f7c23333ca15eb",
            "owner_id": "339713171962",
            "tags": {
              "Name": "Mainvpc_001"
            },
            "tags_all": {
              "Name": "Mainvpc_001"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339713171962:security-group-rule/sgr-091c647b8aa474080",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-091c647b8aa474080",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03fe218d5e1655168",
            "security_group_rule_id": "sgr-091c647b8aa474080",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.Mainvpc"
          ]
        }
      ]
    }
  ]
}